src/test/ui/type-alias-impl-trait/bound_reduction2.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/bound_reduction2.rs:17:5
   |
LL |     ()
   |     ^^
   |
note: used non-generic type `<T as TraitWithAssoc>::Assoc` for generic parameter
  --> $DIR/bound_reduction2.rs:9:10
   |
LL | type Foo<V> = impl Trait<V>;
   |          ^

error: unconstrained opaque type
  --> $DIR/bound_reduction2.rs:9:15
   |
LL | type Foo<V> = impl Trait<V>;
   |               ^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same module

error: aborting due to 2 previous errors

